@@ -301,8 +301,8 @@ void tst_QWebElement::iteration()
     foreach(QWebElement p, paras) {
         foreachList.append(p);
     }
-    QVERIFY(foreachList.length() == 2);
-    QCOMPARE(foreachList.length(), referenceList.length());
+    QVERIFY(foreachList.count() == 2);
+    QCOMPARE(foreachList.count(), referenceList.count());
     QCOMPARE(foreachList.at(0), referenceList.at(0));
     QCOMPARE(foreachList.at(1), referenceList.at(1));
 
@@ -310,8 +310,8 @@ void tst_QWebElement::iteration()
     for (int i = 0; i < paras.count(); ++i) {
         forLoopList.append(paras.at(i));
     }
-    QVERIFY(foreachList.length() == 2);
-    QCOMPARE(foreachList.length(), referenceList.length());
+    QVERIFY(foreachList.count() == 2);
+    QCOMPARE(foreachList.count(), referenceList.count());
     QCOMPARE(foreachList.at(0), referenceList.at(0));
     QCOMPARE(foreachList.at(1), referenceList.at(1));
 
